# nba-data-scrapper

./: pyproject.toml
.dvc/: config
data/: .gitignore  nba_db.duckdb.dvc
nba_data_scrapper/: conn.py  run.py  schema.py  utils.py
nba_data_scrapper/teams/: tb_game_logs.py
sql/: schema.sql
